--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,58 @@ div.grid{
     grid-gap: 40px;
 }
 
+body{
+    background: rgba(228, 238, 209, 0.556);
+    font-family: Arial, Helvetica, sans-serifx;
+}
+
+.visually-hidden {
+    position: absolute!important;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+    clip: rect(1px 1px 1px 1px);
+    clip: rect(1px,1px,1px,1px);
+}
+
+.visually-hidden.focusable {
+    position: absolute!important;
+    overflow: hidden;
+    width: 1px;
+    height: 1px;
+    display: block;
+    text-align: center;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+nav ul li {
+    float: left;
+    padding: 0 2rem;
+  }
+  
+nav ul li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change the link color to #111 (black) on hover */
+nav ul li a:hover {
+    background-color: green;
+  }
+
+
+
+#skip{
+    margin:1rem;
+}
+
