--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,23 @@
 div.grid{
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 40px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows:300px;
+    grid-gap: 20px;
+    justify-content: space-around;
+}
+
+div.grid.travel{
+  grid-template-columns:1fr 1fr 1fr 1fr 1fr;
+}
+div.grid.recipe{
+  grid-template-columns:1fr 1fr 1fr;
+}
+.city{
+  display: flex;
+}
+.city img{
+  width:800px;
+  height:400px;
 }
 
 body{
@@ -9,53 +25,187 @@ body{
     font-family: Arial, Helvetica, sans-serifx;
 }
 
-.visually-hidden {
-    position: absolute!important;
-    height: 1px;
-    width: 1px;
-    overflow: hidden;
-    clip: rect(1px 1px 1px 1px);
-    clip: rect(1px,1px,1px,1px);
+.skip{
+    position: absolute;
+    left: -5000px;
 }
 
-.visually-hidden.focusable {
-    position: absolute!important;
-    overflow: hidden;
-    width: 1px;
-    height: 1px;
-    display: block;
+.skip:focus{
+    position:static;
+    display:block;  
     text-align: center;
+    border:#0a807c solid 4px;
+    font-size:medium;
 }
 
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-nav ul li {
-    float: left;
-    padding: 0 2rem;
-  }
-  
-nav ul li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  /* Change the link color to #111 (black) on hover */
-nav ul li a:hover {
-    background-color: green;
-  }
+.navbar {
+  width: 100%;
+  height:50px;
+  background-color: #555;
+  overflow: auto;
+  display:flex;
+}
 
+/* Navigation links */
+.navbar a {
+  height:50px;
+  display:inline-block;
+  padding: 12px;
+  color: white;
+  text-decoration: none;
+  font-size: x-large;
+  width: 25%; 
+  text-align: center; 
+}
+
+a.home{
+  background-color: rgba(0,106,184,.95);
+}
+a.pet{
+  background-color: #0a807c;
+}
+a.recipes{
+  background-color: rgba(144,59,80,.95)
+}
+a.travel{
+  background-color: #9613ba;
+}
+
+.navbar a:hover{
+  background-color: #cda400;
+}
+
+a.home.active, a.pet.active, a.recipes.active, a.travel.active{
+  background-color: #cda400;
+  font-style:italic;
+  color:black;
+  font-weight: bold;
+  text-decoration: underline;
+}
 
 
 #skip{
     margin:1rem;
 }
 
+.grid img{
+  width: 100%;
+  height:100%;
+  object-fit: cover;
+}
+
+.grid video{
+  width: 100%;
+  height:100%;
+  object-fit: cover;
+}
+
+img{
+  margin-left: auto;
+  margin-right: auto;
+  width:30%;
+  height:10%;
+}
+
+h1{
+  margin-top: auto;
+  text-align:center;
+}
+
+h2{
+  margin-top:5rem;
+  text-align: center;
+}
+
+h3{
+  margin-top:2rem;
+  text-align: center;
+}
+ul{
+  display:flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+ul li{
+  display:inline-block;
+  margin: 0 2rem;
+}
+
+
+@media screen and (max-width:1200px){
+  .navbar {
+    width: 100%;
+    height:50px;
+    display:flex;
+    background-color: #555;
+  }
+  
+  /* Navigation links */
+  .navbar a {
+    height:50px;
+    display:inline-block;
+    padding: 12px;
+    color: white;
+    text-decoration: none;
+    font-size: x-large;
+    width:100%;
+    text-align: center;
+  }
+
+  #skip{
+    margin:1rem;
+}
+
+.grid img{
+  width: 100%;
+  height:100%;
+  object-fit: cover;
+}
+
+.grid video{
+  width: 100%;
+  height:100%;
+  object-fit: cover;
+}
+
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width:100%;
+  height:300px;
+}
+
+div.grid{
+  grid-template-columns: 1fr;
+  grid-template-rows:300px 300px 300px 300px;
+  width: 100%;
+  height:100%;
+  object-fit: cover;
+}
+
+div.grid.travel{
+  grid-template-columns: 1fr ;
+  grid-template-rows:200px 200px 200px 200px 200px;
+}
+div.grid.recipe{
+  grid-template-columns: 1fr;
+  grid-template-rows:200px 200px 200px;
+}
+ul{
+  display: contents;
+  margin: auto auto auto auto;
+}
+ul li{
+  display:block;
+  margin-top:20px;
+  text-align: center;
+}
+.gif{
+  display:none;
+}
+.city img{
+  max-width:400px;
+  height:200px;
+}
+}
