--- a/css/style.css
+++ b/css/style.css
@@ -101,10 +101,10 @@ a.home.active, a.pet.active, a.recipes.active, a.travel.active{
 }
 
 img{
+  display: block;
   margin-left: auto;
   margin-right: auto;
-  width:30%;
-  height:10%;
+  height:500px;
 }
 
 h1{
@@ -172,25 +172,22 @@ img{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width:100%;
-  height:300px;
+  width:70%;
+  height:50%;
 }
 
 div.grid{
   grid-template-columns: 1fr;
-  grid-template-rows:300px 300px 300px 300px;
-  width: 100%;
-  height:100%;
-  object-fit: cover;
+  grid-template-rows:400px 400px 400px 400px;
 }
 
 div.grid.travel{
-  grid-template-columns: 1fr ;
-  grid-template-rows:200px 200px 200px 200px 200px;
+  grid-template-columns: 1fr;
+  grid-template-rows:400px 400px 400px 400px 400px;
 }
 div.grid.recipe{
   grid-template-columns: 1fr;
-  grid-template-rows:200px 200px 200px;
+  grid-template-rows:400px 400px 400px;
 }
 ul{
   display: contents;
@@ -205,7 +202,7 @@ ul li{
   display:none;
 }
 .city img{
-  max-width:400px;
+  width:400px;
   height:200px;
 }
 }
