--- a/css/style.css
+++ b/css/style.css
@@ -92,12 +92,14 @@ a.home.active, a.pet.active, a.recipes.active, a.travel.active{
   width: 100%;
   height:100%;
   object-fit: cover;
+  border:solid 5px brown;
 }
 
 .grid video{
   width: 100%;
   height:100%;
   object-fit: cover;
+  border:solid 5px brown;
 }
 
 img{
@@ -105,6 +107,7 @@ img{
   margin-left: auto;
   margin-right: auto;
   height:500px;
+  border:solid 5px brown;
 }
 
 h1{
