--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ div.grid.recipe{
 
 body{
     background: rgba(228, 238, 209, 0.556);
-    font-family: Arial, Helvetica, sans-serifx;
+    font-family: Arial, sans-serif;
 }
 
 .skip{
