--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body{
     display:block;  
     text-align: center;
     border:#0a807c solid 4px;
-    font-size:medium;
+    font-size:20px;
 }
 
 .navbar {
@@ -100,6 +100,7 @@ a.home.active, a.pet.active, a.recipes.active, a.travel.active{
   height:100%;
   object-fit: cover;
   border:solid 5px brown;
+  margin-top:1rem;
 }
 
 img{
@@ -108,33 +109,47 @@ img{
   margin-right: auto;
   height:500px;
   border:solid 5px brown;
+  margin-top:1rem;
 }
 
 h1{
-  margin-top: auto;
+  margin-top: 2rem;
   text-align:center;
+  font-size:37px;
+  font-weight: bold;
 }
 
 h2{
-  margin-top:5rem;
+  margin-top:100px;
   text-align: center;
+  font-weight:bold;
+  font-size:30px;
 }
 
 h3{
   margin-top:2rem;
+  font-size:25px;
+  font-weight:bold;
   text-align: center;
+}
+
+p{
+  margin-top: 2rem;
 }
 ul{
   display:flex;
   align-items: center;
   justify-content: space-evenly;
+  margin-top:2rem;
 }
 ul li{
   display:inline-block;
   margin: 0 2rem;
 }
 
-
+ol li{
+  margin:1.5rem;
+}
 @media screen and (max-width:1200px){
   .navbar {
     width: 100%;
